--- a/javaee-training-bookstore/src/main/java/javaeetutorial/bookstore/web/messages/Messages.properties
+++ b/javaee-training-bookstore/src/main/java/javaeetutorial/bookstore/web/messages/Messages.properties
@@ -7,6 +7,7 @@
 #
 
 ServerError=Your request cannot be completed.  The server got the following error:            },
+error.getBooks=Could not get list of books
 TitleServerError=Server Error
 TitleShoppingCart=Shopping Cart
 TitleReceipt=Receipt
